--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -6,6 +6,30 @@
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
+        <item name="android:windowAnimationStyle">
+            @style/Slide_Animation
+        </item>
+
+    </style>
+
+    <style name="Slide_Animation" parent="@android:style/Animation.Activity">
+
+        <item name="android:activityOpenEnterAnimation">
+            @anim/slide_right_in
+        </item>
+
+        <item name="android:activityOpenExitAnimation">
+            @anim/slide_left_out
+        </item>
+
+        <item name="android:activityCloseEnterAnimation">
+            @anim/slide_left_in
+        </item>
+
+        <item name="android:activityCloseExitAnimation">
+            @anim/slide_right_out
+        </item>
+
     </style>
 
 </resources>
